--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "==19.10b0"
+pylint = "*"
 flake8 = "*"
+mypy = "*"
+pytest = "*"
 
 [packages]
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
